[gd_scene load_steps=6 format=2]

[ext_resource path="res://Elements/Rocketship/Rocketship.gd" type="Script" id=1]
[ext_resource path="res://Elements/UI/Trail/Trail.tscn" type="PackedScene" id=2]
[ext_resource path="res://Elements/Rocketship/RessourcePicker.gd" type="Script" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 8.00004
height = 15.9999

[sub_resource type="Gradient" id=2]
colors = PoolColorArray( 0, 0, 0, 1, 0.946667, 0.946667, 0.946667, 1 )

[node name="Rocketship" type="Node2D"]
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2( 16, 0 )
color = Color( 0.196078, 0.196078, 0.196078, 1 )
polygon = PoolVector2Array( -16, 8, -16, -8, 8, -8, 16, 0, 8, 8 )

[node name="RessourcePicker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="RessourcePicker"]
position = Vector2( 16, 0 )
rotation = 1.57079
shape = SubResource( 1 )

[node name="Trail" parent="." instance=ExtResource( 2 )]
modulate = Color( 24.86, 0.44, 0.01, 1 )
show_behind_parent = true
default_color = Color( 43.35, 0.47, 0, 1 )
gradient = SubResource( 2 )
lenght = 30

[connection signal="WeAreHome" from="RessourcePicker" to="." method="_on_RessourcePicker_WeAreHome"]
[connection signal="area_entered" from="RessourcePicker" to="RessourcePicker" method="_on_RessourcePicker_area_entered"]
[connection signal="gatheredRessources" from="RessourcePicker" to="." method="_on_RessourcePicker_gatheredRessources"]
